--- a/OpenSim.WebServer.App/OpenSim.WebServer.App.csproj
+++ b/OpenSim.WebServer.App/OpenSim.WebServer.App.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +23,10 @@
 
   <ItemGroup>
     <Content Include="ClientApp\app\theme\opensim-theme.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\Simulation\" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
