--- a/OpenSim.WebServer.App/package.json
+++ b/OpenSim.WebServer.App/package.json
@@ -61,6 +61,6 @@
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
     "zone.js": "0.8.12",
-    "ngx-dropdown": "0.0.22"
+    "angular2-expandable-list": "0.5.0"
   }
 }
