--- a/OpenSim.WebServer.App/package.json
+++ b/OpenSim.WebServer.App/package.json
@@ -50,6 +50,7 @@
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
     "karma-webpack": "2.0.3",
+    "ngx-file-drop": "^4.0.4",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
