--- a/OpenSim.WebServer.App/package.json
+++ b/OpenSim.WebServer.App/package.json
@@ -9,17 +9,17 @@
     "build-full-sources": "webpack --devtool eval-source-map"
   },
   "devDependencies": {
-    "@angular/animations": "^6.0.4",
-    "@angular/common": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
-    "@angular/compiler-cli": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/forms": "^6.0.4",
-    "@angular/http": "^6.0.4",
-    "@angular/platform-browser": "^6.0.4",
-    "@angular/platform-browser-dynamic": "^6.0.4",
-    "@angular/platform-server": "^6.0.4",
-    "@angular/router": "^6.0.4",
+    "@angular/animations": "~6.0.5",
+    "@angular/common": "~6.0.5",
+    "@angular/compiler": "~6.0.5",
+    "@angular/compiler-cli": "~6.0.5",
+    "@angular/core": "~6.0.5",
+    "@angular/forms": "~6.0.5",
+    "@angular/http": "~6.0.5",
+    "@angular/platform-browser": "~6.0.5",
+    "@angular/platform-browser-dynamic": "~6.0.5",
+    "@angular/platform-server": "~6.0.5",
+    "@angular/router": "~6.0.5",
     "@ngtools/webpack": "^1.10.0",
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
@@ -39,6 +39,7 @@
     "expose-loader": "0.7.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
+    "hal-4-angular": "^6.0.4",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
     "jasmine-core": "2.6.4",
@@ -50,12 +51,12 @@
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
     "karma-webpack": "2.0.3",
-    "ngx-file-drop": "^4.0.4",
+    "ngx-file-drop": "^4.0.6",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
-    "rxjs": "^6.0.0",
-    "rxjs-tslint": "^0.1.4",
+    "rxjs": "^6.2.2",
+    "rxjs-tslint": "^0.1.5",
     "style-loader": "0.18.2",
     "to-string-loader": "1.1.5",
     "typescript": "~2.7.2",
