minor improvements in embedding resource class

--- a/OpenSim.WebServer.App/OpenSim.WebServer.App.csproj
+++ b/OpenSim.WebServer.App/OpenSim.WebServer.App.csproj
@@ -25,7 +25,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\app\model\value-and-stream.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="ClientApp\app\theme\opensim-theme.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\model\value-and-stream.ts" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
