--- a/Portal/ClientApp/package.json
+++ b/Portal/ClientApp/package.json
@@ -5,7 +5,6 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "build-webpack": "webpack --config webpack.config.js",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
@@ -51,13 +50,6 @@
         "ts-node": "~7.0.0",
         "tslint": "~5.11.0",
         "typescript": "~3.1.6",
-        "webpack": "^4.6.0",
-        "webpack-bundle-analyzer": "^3.0.3",
-        "webpack-cli": "^3.2.1",
-        "awesome-typescript-loader": "^5.2.1",
-        "css-loader": "^1.0.0",
-        "file-loader": "^2.0.0",
-        "html-loader": "^0.5.1",
-        "raw-loader": "^0.5.1"
+        "webpack": "^4.6.0"
     }
 }
