--- a/Portal/ClientApp/package.json
+++ b/Portal/ClientApp/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start-dev": "ng serve",
+        "start-prod": "ng serve --prod",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
