migrating in-memory db -> ms sql (in progress)

--- a/Portal/appsettings.json
+++ b/Portal/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "Data": {
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OpenSim.Portal;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
