identity moved to ms sql

--- a/Portal/appsettings.json
+++ b/Portal/appsettings.json
@@ -7,5 +7,8 @@
   "Data": {
     "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OpenSim.Portal;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Identity": {
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OpenSim.Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
