docker in progress

--- a/Portal/appsettings.json
+++ b/Portal/appsettings.json
@@ -5,10 +5,15 @@
     }
   },
   "Data": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OpenSim.Portal;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Identity": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OpenSim.Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Local": {
+      "ContentConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OpenSim.Portal;Trusted_Connection=True;MultipleActiveResultSets=true",
+      "IdentityConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OpenSim.Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Docker": {
+      "ContentConnectionString": "Server=(db)\\Database=master;User=sa;Password=OpenSim123;MultipleActiveResultSets=true",
+      "IdentityConnectionString": "Server=(db)\\Database=master;User=sa;Password=OpenSim123;MultipleActiveResultSets=true"
+
+    } 
   },
   "AllowedHosts": "*"
 }
