--- a/Portal/Dockerfile
+++ b/Portal/Dockerfile
@@ -17,3 +17,6 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "OpenSim.Portal.dll"]
+
+RUN chmod +x ./entrypoint.sh
+CMD /bin/bash ./entrypoint.sh
