--- a/Portal/Dockerfile
+++ b/Portal/Dockerfile
@@ -1,22 +1,26 @@
-FROM microsoft/dotnet:2.2-aspnetcore-runtime AS base
+#FROM microsoft/dotnet:2.2-aspnetcore-runtime AS base
+#WORKDIR /app
+#EXPOSE 80
+
+FROM microsoft/dotnet:2.2-sdk AS build-env
 WORKDIR /app
-EXPOSE 80
+COPY Portal.csproj ./
+RUN dotnet restore
+#COPY . ./
 
-FROM microsoft/dotnet:2.2-sdk AS build
-WORKDIR /src
-COPY ["Portal/Portal.csproj", "Portal/"]
-RUN dotnet restore "Portal/Portal.csproj"
-COPY . .
-WORKDIR "/src/Portal"
-RUN dotnet build "Portal.csproj" -c Release -o /app
+#WORKDIR "/src/Portal"
+#RUN dotnet build "Portal.csproj" -c Release -o /app
 
-FROM build AS publish
-RUN dotnet publish "Portal.csproj" -c Release -o /app
+#FROM build AS publish
+#RUN dotnet publish "Portal.csproj" -c Release -o /app
+COPY . ./
+RUN dotnet publish -c Release -o out
 
-FROM base AS final
+FROM microsoft/dotnet:2.2-aspnetcore-runtime
 WORKDIR /app
-COPY --from=publish /app .
+COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "OpenSim.Portal.dll"]
 
-RUN chmod +x ./entrypoint.sh
-CMD /bin/bash ./entrypoint.sh
+EXPOSE 80/tcp
+#RUN chmod +x ./entrypoint.sh
+#CMD /bin/bash ./entrypoint.sh
