migrating to stable version of angular4-hal

--- a/Portal/ClientApp/package.json
+++ b/Portal/ClientApp/package.json
@@ -12,16 +12,16 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~7.2.x",
-        "@angular/common": "~7.2.x",
-        "@angular/compiler": "~7.2.x",
-        "@angular/core": "~7.2.x",
-        "@angular/forms": "~7.2.x",
-        "@angular/platform-browser": "~7.2.x",
-        "@angular/platform-browser-dynamic": "~7.2.x",
-        "@angular/router": "~7.2.x",
+        "@angular/animations": "~7.1.0",
+        "@angular/common": "~7.1.0",
+        "@angular/compiler": "~7.1.0",
+        "@angular/core": "~7.1.0",
+        "@angular/forms": "~7.1.0",
+        "@angular/platform-browser": "~7.1.0",
+        "@angular/platform-browser-dynamic": "~7.1.0",
+        "@angular/router": "~7.1.0",
         "angular2-expandable-list": "^0.5.0",
-        "angular4-hal": "^7.8.2",
+        "angular4-hal": "~7.5.0",
         "bootstrap": "^3.0.0",
         "core-js": "^2.5.4",
         "ngx-file-drop": "^5.0.0",
@@ -31,9 +31,9 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.11.0",
-        "@angular/cli": "~7.2.x",
-        "@angular/compiler-cli": "~7.2.x",
-        "@angular/language-service": "~7.2.x",
+        "@angular/cli": "~7.1.4",
+        "@angular/compiler-cli": "~7.1.0",
+        "@angular/language-service": "~7.1.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
