--- a/Portal/docker-compose.yml
+++ b/Portal/docker-compose.yml
@@ -1,13 +1,18 @@
 ﻿version: "3"
 services:
-    web:
-        build: .
-        ports:
-            - "8000:80"
-        depends_on:
-            - db
-    db:
-        image: "mcr.microsoft.com/mssql/server"
-        environment:
-            SA_PASSWORD: "OpenSim123"
-            ACCEPT_EULA: "Y"
+  db:
+    image: "mcr.microsoft.com/mssql/server:2017-latest"
+    environment:
+      SA_PASSWORD: "OpenSim123"
+      ACCEPT_EULA: "Y"
+      MSSQL_PID: "Enterprise"
+    ports:
+       - "1433:1433"
+         
+  web:
+    build: .
+    ports:
+      - 8000:80
+    depends_on:
+      - db
+    
