--- a/Portal/appsettings.json
+++ b/Portal/appsettings.json
@@ -10,8 +10,8 @@
       "IdentityConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OpenSim.Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Docker": {
-      "ContentConnectionString": "Server=(db)\\Database=master;User=sa;Password=OpenSim123;MultipleActiveResultSets=true",
-      "IdentityConnectionString": "Server=(db)\\Database=master;User=sa;Password=OpenSim123;MultipleActiveResultSets=true"
+      "ContentConnectionString": "Server=db,1433;Database=OpenSim.Portal;User=sa;Password=OpenSim123;MultipleActiveResultSets=true",
+      "IdentityConnectionString": "Server=db,1433;Database=OpenSim.Identity;User=sa;Password=OpenSim123;MultipleActiveResultSets=true"
     } 
   },
   "AllowedHosts": "*"
