--- a/Portal/docker-compose.yml
+++ b/Portal/docker-compose.yml
@@ -1,4 +1,8 @@
 ﻿version: "3"
+
+networks:
+  backend:
+
 services:
   db:
     image: "mcr.microsoft.com/mssql/server:2017-latest"
@@ -6,13 +10,17 @@ services:
       SA_PASSWORD: "OpenSim123"
       ACCEPT_EULA: "Y"
       MSSQL_PID: "Enterprise"
+    networks:
+      - backend
     ports:
-       - "1433:1433"
+      - "1433:1433"
          
   web:
     build: .
-    ports:
-      - 8000:80
     depends_on:
       - db
+    networks:
+      - backend
+    ports:
+      - 8000:80
     
