working docker for ng initial content seed restored

--- a/Portal/docker-compose.yml
+++ b/Portal/docker-compose.yml
@@ -2,7 +2,6 @@
 
 networks:
   backend:
-  frontend:
 
 services:
   db:
@@ -14,28 +13,14 @@ services:
     networks:
       - backend
 
-#  api_with_app:
-#    build: 
-#      context: .
-#      dockerfile: Dockerfile
-#    depends_on:
-#      - db
-#    networks:
-#      - backend
-#    ports:
-#      - 3000:80
-
   api:
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    build: . 
     depends_on:
       - db
     networks:
       - backend
-      - frontend
- #   ports:
- #     - 3000:80
+    ports:
+      - 3000:80
 
   app:
     build:
@@ -43,8 +28,6 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - api
-    networks:
-      - frontend
     ports:
       - 4200:80
     
