--- a/Portal/ClientApp/package.json
+++ b/Portal/ClientApp/package.json
@@ -11,6 +11,10 @@
         "e2e": "ng e2e"
     },
     "private": true,
+    "dependenciesComments": {
+        "jquery": "is needed for bootstrap 4 only",
+        "popper.js": "is needed for bootstrap 4 only"
+    }, 
     "dependencies": {
         "@angular/animations": "~7.1.0",
         "@angular/common": "~7.1.0",
@@ -24,7 +28,9 @@
         "angular4-hal": "~7.5.0",
         "bootstrap": "^4.0.0",
         "core-js": "^2.5.4",
+        "jquery": "~1.9.1",
         "ngx-file-drop": "^5.0.0",
+        "popper.js": "~1.14.7",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "zone.js": "~0.8.26"
