--- a/Portal/ClientApp/angular.json
+++ b/Portal/ClientApp/angular.json
@@ -47,8 +47,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
-
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": [
               "node_modules/popper.js/dist/umd/popper.min.js",
