--- a/Portal/ClientApp/package.json
+++ b/Portal/ClientApp/package.json
@@ -24,9 +24,11 @@
         "@angular/platform-browser": "~7.1.0",
         "@angular/platform-browser-dynamic": "~7.1.0",
         "@angular/router": "~7.1.0",
+        "angular-font-awesome": "^3.1.2",
         "angular4-hal": "~7.5.0",
         "bootstrap": "^4.0.0",
         "core-js": "^2.5.4",
+        "font-awesome": "^4.7.0",
         "jquery": "~1.9.1",
         "ngx-file-drop": "^5.0.0",
         "popper.js": "~1.14.7",
