started material porting

--- a/Portal/ClientApp/package.json
+++ b/Portal/ClientApp/package.json
@@ -16,22 +16,22 @@
         "popper.js": "is needed for bootstrap 4 only"
     },
     "dependencies": {
-        "@angular/animations": "~7.1.0",
+        "@angular/animations": "^7.1.4",
+        "@angular/cdk": "^7.3.7",
         "@angular/common": "~7.1.0",
         "@angular/compiler": "~7.1.0",
         "@angular/core": "~7.1.0",
+        "@angular/flex-layout": "^7.0.0-beta.24",
         "@angular/forms": "~7.1.0",
+        "@angular/material": "^7.3.7",
         "@angular/platform-browser": "~7.1.0",
         "@angular/platform-browser-dynamic": "~7.1.0",
         "@angular/router": "~7.1.0",
         "angular-font-awesome": "^3.1.2",
         "angular4-hal": "~7.5.0",
-        "bootstrap": "^4.0.0",
         "core-js": "^2.5.4",
         "font-awesome": "^4.7.0",
-        "jquery": "~1.9.1",
         "ngx-file-drop": "^5.0.0",
-        "popper.js": "~1.14.7",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "zone.js": "~0.8.26"
